--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col d-flex flex-wrap">
-        <h1 class="w-100" style="font-size: 65px;">Visualize a World Anthem</h1>
+        <h1 class="w-100" style="font-size: 65px;">Visualize any country anthem</h1>
         <p class="w-100 lead" style="font-size: 30px;">If you need something to do. You've found the correct place. <br> Just
           click whatever button you need.</p>
       </div>
