Slider for dynamic word set, index format

--- a/templates/country.html
+++ b/templates/country.html
@@ -20,12 +20,12 @@
   
 
   <link rel="stylesheet" href="../static/style.css">
-  <title>World Anthem's Visualization</title>
+  <title>Anthems of the World</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-between">
-    <a routerLink="/" class="navbar-brand" href="/" style="margin-left: 0.5rem;">World Anthem's Visualization</a>
+    <a routerLink="/" class="navbar-brand" href="/" style="margin-left: 0.5rem;">Anthems of the World</a>
     <!-- Dropdown -->
     <div class="nav-item dropdown" style="margin-right: 0rem;">
       <button class="btn btn-dark dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
