--- a/static/style.css
+++ b/static/style.css
@@ -51,10 +51,45 @@ input,
 }
 
 .slidecontainer {
-    margin-left:  -1rem;
+    margin-left: 1rem;
     margin-top: 1rem;
 }
 
 .highlight {
     background-color: yellow;
+}
+
+#cloud {
+    width: auto;
+    height: 400px;
+}
+
+/* Slider CSS taken from https://www.w3schools.com/howto/howto_js_rangeslider.asp */
+
+.slidecontainer {
+    background-color: #e0e0e0;
+    margin-bottom: 1rem;
+    margin-left: -2.5px;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;  
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%; 
+    background: #04AA6D;
+    cursor: pointer;
 }
